--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -9,8 +9,9 @@
     <style type="text/css">
 .navbar { border: 0; }
      </style>
-      <script>new WOW().init();</script>
+      
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet"> 
      <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet"> 
      <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.css" rel="stylesheet">  
      <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.1/css/froala_editor.min.css" rel="stylesheet">  
@@ -88,7 +89,7 @@
      <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <section class="wow zoomIn"><div class="view view-first">
+        <div data-aos="flip-left"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -96,11 +97,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div>
+                </div></div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <section class="wow zoomIn"><div class="view view-first">
+ <div data-aos="flip-right"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -108,25 +109,25 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div></div>
+               </div></div>
 
     <div class="clearfix"></div>
     <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <section class="wow zoomIn"><div class="view view-first">
+        <div data-aos="flip-down"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
                         <p class="class="view view-first"">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
-                        <a href="#" class="info">Read More</a>
+                        <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div>
+                </div></div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <section class="wow zoomIn"><div class="view view-first">
+<div data-aos="flip-up"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -134,13 +135,13 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div></div>
+                </div></div></div>
           
       <div class="clearfix"></div>
    <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <section class="wow zoomIn"><div class="view view-first">
+        <div data-aos="zoom-in"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -148,11 +149,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div>
+                </div></div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <section class="wow zoomIn"><div class="view view-first">
+<div data-aos="zoom-in-up"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -160,7 +161,7 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div></div>
+                </div></div></div>
       
 
     <div class="clearfix"></div>
@@ -168,27 +169,29 @@
     <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <section class="wow zoomIn"><div class="view view-first">
+        <div data-aos="zoom-in-down"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
-                        <p class="class="view view-first"">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
+                        <p class="class="view view-first"">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                        </p>
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div>
+                </div></div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <section class="wow zoomIn"><div class="view view-first">
+ <div data-aos="zoom-in-left"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
-                        <p class="class="view view-first"">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
+                        <p class="class="view view-first"">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                        </p>
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </section></div></div>
+                </div></div></div>
          <div class="clearfix"></div>
         <div class="content">
       <div class="col-md-6">
@@ -519,7 +522,7 @@ $('body,html').animate({scrollTop: top}, 1000);
   $(document).ready(function() {
     $(".dropdown-toggle").dropdown();
 });</script>
-
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
