--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -169,7 +169,7 @@
     <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <div data-aos="zoom-in-down"><div class="view view-first">
+        <div data-aos="fade-up" data-aos-duration="3000"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -182,7 +182,7 @@
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <div data-aos="zoom-in-left"><div class="view view-first">
+<div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"><div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
