--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -11,11 +11,9 @@
      </style>
       
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet"> 
+     
      <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet"> 
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.css" rel="stylesheet">  
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.1/css/froala_editor.min.css" rel="stylesheet">  
-    
+              
      </head>
  <body class="body-style">  
   <div id="preloader">
@@ -89,7 +87,7 @@
      <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <div data-aos="flip-left"><div class="view view-first">
+        <div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -97,11 +95,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div>
+                </div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
- <div data-aos="flip-right"><div class="view view-first">
+  <div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -109,13 +107,13 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-               </div></div>
+               </div>
 
     <div class="clearfix"></div>
     <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <div data-aos="flip-down"><div class="view view-first">
+       <div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -123,11 +121,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div>
+                </div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
-<div data-aos="flip-up"><div class="view view-first">
+<div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -135,13 +133,13 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div></div>
+                </div></div>
           
       <div class="clearfix"></div>
    <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <div data-aos="zoom-in"><div class="view view-first">
+       <div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -149,11 +147,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div>
+                </div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
-<div data-aos="zoom-in-up"><div class="view view-first">
+<div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -161,7 +159,7 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div></div>
+                </div></div>
       
 
     <div class="clearfix"></div>
@@ -169,7 +167,7 @@
     <div class="content">
        <div class="col-sm-4 col-md-4 col-lg-6">
 
-        <div data-aos="fade-up" data-aos-duration="3000"><div class="view view-first">
+        <div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=442" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #1</h2>
@@ -178,11 +176,11 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div>
+                </div>
         
          <div class="col-sm-4 col-md-8 col-lg-6">
            
-<div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500"><div class="view view-first">
+<div class="view view-first">
                    <img class="img_home_left" src="https://unsplash.it/585/400?image=443" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">Пример шаблона #2</h2>
@@ -191,7 +189,7 @@
                         <a href="#" class="info">Далее</a>
                     </div>
                 </div> 
-                </div></div></div>
+                </div></div>
          <div class="clearfix"></div>
         <div class="content">
       <div class="col-md-6">
@@ -522,7 +520,7 @@ $('body,html').animate({scrollTop: top}, 1000);
   $(document).ready(function() {
     $(".dropdown-toggle").dropdown();
 });</script>
-<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
