--- a/app/assets/stylesheets/style_common.sass
+++ b/app/assets/stylesheets/style_common.sass
@@ -10,7 +10,7 @@
    -moz-box-shadow: 1px 1px 2px #e6e6e6
    box-shadow: 1px 1px 2px #e6e6e6
    cursor: default
-   z-index: 96
+   border: 10px solid #ffffff
 .view .mask,.view .content 
    width: 500px
    height: 100%
@@ -18,7 +18,7 @@
    overflow: hidden
    top: 0
    left: 0
-   z-index: 96 
+   
 .view img 
    display: block
    position: relative
