--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .logo
-  background-image: image-url("logo.png")
+  background-image: image-url('logo.png')
   position: absolute
   width: 127px
   height: 121px
@@ -247,4 +247,98 @@ h1
   text-shadow: 0px 2px 3px #fff  
 .img_top
   z-index: 96
+.clearfix_footer
+  padding: 20px  
+.footer 
+  background: #EDEFF1
+  height: auto
+  padding-bottom: 30px
+  position: relative
+  width: 100%
+  border-bottom: 1px solid #CCCCCC
+  border-top: 1px solid #DDDDDD
+.footer p 
+  margin: 0
+.center  
   
+  padding: 1em
+.footer img 
+  max-width: 100%
+.footer h3 
+  border-bottom: 1px solid #BAC1C8
+  color: #777777
+  font-size: 18px
+  font-weight: 600
+  line-height: 27px
+  text-transform: uppercase
+  text-align: center
+.social
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: absolute
+  top: 20px
+  width: 176px
+.f_cpl 
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: relative
+  top: 20px 
+.social li 
+  background: none repeat scroll 0 0 #B5B5B5
+  border: 2px solid #B5B5B5
+  -webkit-border-radius: 50%
+  -moz-border-radius: 50%
+  -o-border-radius: 50%
+  -ms-border-radius: 50%
+  border-radius: 50%
+  float: left
+  height: 36px
+  line-height: 36px
+  margin: 0 8px 0 0
+  padding: 0
+  text-align: center
+  width: 36px
+  transition: all 0.5s ease 0s
+  -moz-transition: all 0.5s ease 0s
+  -webkit-transition: all 0.5s ease 0s
+  -ms-transition: all 0.5s ease 0s
+  -o-transition: all 0.5s ease 0s
+
+
+.social li:hover 
+  transform: scale(1.15) rotate(360deg)
+  -webkit-transform: scale(1.1) rotate(360deg)
+  -moz-transform: scale(1.1) rotate(360deg)
+  -ms-transform: scale(1.1) rotate(360deg)
+  -o-transform: scale(1.1) rotate(360deg)
+
+.social li a 
+  color: #777777
+.social li:hover 
+  border: 2px solid #ccc
+  background: #333
+
+.social li a i 
+  font-size: 16px
+  margin: 0 0 0 5px
+  color: #EDEFF1 !important
+
+.footer-bottom 
+  background: #E3E3E3
+  border-top: 1px solid #DDDDDD
+  padding-top: 10px
+  padding-bottom: 10px
+  height: 40px
+.footer-bottom p.pull-left 
+  padding-top: 21px
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: absolute
+.row_footer 
+  padding: 20px     
