--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,20 @@
     .dropdown-menu {
   background-color: #fcfcfc;
 }
+li {
+    list-style-type: none; /* Убираем маркеры */
+   }
+   ul {
+    margin-left: 0; /* Отступ слева в браузере IE и Opera */
+    padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+   }
+   a {
+  color: #777777 }
+a:hover {
+  color: #333  }
         </style>
         <meta name="viewport" content="width=device-width; initial-scale=1.0">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">  
       <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.css" rel="stylesheet"> 
       <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.1/css/froala_editor.min.css" rel="stylesheet">    
@@ -121,11 +133,73 @@
 
          </div>
          </div>
-         
-          </div>
+        </div>
         </div>
       </div>
    </div>
+   <footer>
+    <div class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="f_cpl">
+               <div class="col-md-4 col-sm-12 col-xs-12 my-col"><h3>Создание сайтов</h3>
+                    <ul class="center">
+                        <li><a href="#">Блог</a></li>
+                        <li><a href="#">Визика</a></li>
+                        <li><a href="#">Интернет магазин</a></li>
+                        <li><a href="#">Государственные услуги</a></li>
+                    </ul></div>
+               <div class="col-md-4 col-sm-12 col-xs-12 my-col">
+                    <h3>Создание сайтов</h3>
+                    <ul class="center">
+                        <li><a href="#">Блог</a></li>
+                        <li><a href="#">Визика</a></li>
+                        <li><a href="#">Интернет магазин</a></li>
+                        <li><a href="#">Государственные услуги</a></li>
+                    </ul>
+                </div>
+             <div class="col-md-4 col-sm-12 col-xs-12 my-col"><h3>Создание сайтов</h3>
+                    <ul class="center">
+                        <li><a href="#">Блог</a></li>
+                        <li><a href="#">Визика</a></li>
+                        <li><a href="#">Интернет магазин</a></li>
+                        <li><a href="#">Государственные услуги</a></li>
+                    </ul></div>
+                </div>
+                </div>
+                 <div class="row_footer">
+                                 
+                
+                <div class="col-lg-12  col-md-12 col-sm-12 col-xs-12 ">
+                   
+                    <ul class="social">
+                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        
+                    </ul>
+                </div>
+               
+                </div>
+               
+            </div>
+            <!--/.row--> 
+        </div>
+        <!--/.container--> 
+    </div>
+    <!--/.footer-->
+    
+    <div class="footer-bottom">
+        <div class="container">
+            <p class="pull-left"> Copyright © Web-Joys.ru 2018</p>
+            <div class="pull-right">
+                
+            </div>
+        </div>
+    </div>
+    <!--/.footer-bottom--> 
+</footer>
 <script type="text/javascript">
   $(function(){
  $(window).scroll(function() {
