--- a/app/assets/stylesheets/pagination.sass
+++ b/app/assets/stylesheets/pagination.sass
@@ -1,5 +1,4 @@
 .digg_pagination
-  background: #fcfcfc
   cursor: default
   float: right
   min-width: 300px
@@ -10,7 +9,7 @@
     float: left
     margin-right: 1px
     border-radius: 4px
-    background: #fff
+    background: #f5f5f5
     box-shadow: 2px 2px 2px 1px rgba(171, 166, 166, 0.3)
       
    
