--- a/app/assets/stylesheets/buttom_dauw.sass
+++ b/app/assets/stylesheets/buttom_dauw.sass
@@ -29,3 +29,27 @@ button_dawn
       transform: translateY(-7px)
     100%
       transform: translateY(0)
+.arrow-scroll2
+  position: absolute
+  text-align: center
+  z-index: 9
+  right: 0
+  left: 0
+  bottom: 40px
+  &__wrap
+    display: inline-block
+    transition: all ease-in-out 0.2s
+    cursor: pointer
+    &:hover
+      opacity: .5
+    &_animated
+      animation: arrow-scroll 1.7s infinite ease
+  @keyframes arrow-scroll
+    0%
+      transform: translateY(0)
+    50%
+      transform: translateY(-7px)
+    55%
+      transform: translateY(-7px)
+    100%
+      transform: translateY(0)
