--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .logo
-  background-image: image-url('logo.png')
+  
   position: absolute
   width: 127px
   height: 121px
@@ -35,6 +35,8 @@
   text-shadow: 0px 2px 3px rgba(255, 255, 255, 1.5)
 .body-style
   background-color: #fcfcfc
+  background-image: image-url('bg_b.png')
+  
 .container  
   width: 100% 
 .ln
@@ -277,8 +279,7 @@ h1
   margin-right: -50%
   transform: translate(-50%, -50%)
   margin: 0
-  position: absolute
-  top: 20px
+  position: relative
   width: 176px
 .f_cpl 
   left: 50%
@@ -328,11 +329,11 @@ h1
   color: #EDEFF1 !important
 
 .footer-bottom 
-  background: #E3E3E3
+  background: #b7b7b7
   border-top: 1px solid #DDDDDD
   padding-top: 10px
   padding-bottom: 10px
-  height: 40px
+  height: 50px
 .footer-bottom p.pull-left 
   padding-top: 21px
   left: 50%
@@ -340,5 +341,81 @@ h1
   transform: translate(-50%, -50%)
   margin: 0
   position: absolute
+.footer-bottom p.pull-left2 
+  padding-top: 1px
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: absolute
+.pull-left2_f
+  padding: 0.5em 
+  margin-top: 22px 
 .row_footer 
   padding: 20px     
+.commit  
+  padding: 1em
+  float: right
+.links_shared
+  padding: 1em
+.logo_ubuntu
+  background-image: image-url('Logo-ubuntu.svg.png')
+  background-size: 100%
+  position: relative
+  display: block
+  height: 16px
+  width: 16px
+.logo_rails  
+  background-image: image-url('Ruby_On_Rails_Logo.svg.png')
+  background-size: 100%
+  position: relative
+  display: block
+  height: 16px
+  width: 44px
+.logo_nginx  
+  background-image: image-url('Nginx-Logo.png')
+  background-size: 100%
+  position: relative
+  display: block
+  height: 23px
+  width: 23px  
+.logo_postgresql
+  background-image: image-url('logo-postgresql.png')
+  background-size: 100%
+  position: relative
+  display: block
+  height: 26px
+  width: 27px   
+.line
+  border-top: 1px dashed #bdbdbd
+  height: 18px
+.text_home  
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: relative
+  width: 300px  
+  top: 100px
+  font-family: "Caveat", cursive
+  font-size: 20px
+.text_home_title
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  position: relative
+  width: 176px  
+  padding: 1em
+  font-family: "Caveat", cursive
+.stih
+  margin-top: 32px 
+.money
+  padding: 3em
+.logo_cont     
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin-bottom: 40px
+  position: relative
+  top: 25px
