--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -19,19 +19,16 @@
 .navbar-nav 
   margin: 0px
 .h1_title 
-  background-color: #838181
-  color: transparent
-  text-shadow: 0px 2px 3px rgba(255, 255, 255, 1.5)
-  -webkit-background-clip: text
-  -moz-background-clip: text
-  background-clip: text
+  
+  color: #838181
+  
 .h2_link
   color: #b1abab
   text-shadow: 1px 1px 1px #fff
   padding: 0.3em
 .link_h2  
   color: #ad650c
-  text-shadow: 2px 3px 4px rgba(255,255,255,1.5)
+  
 .link_h2:hover
   color: #d47b0d
 .link_to
@@ -53,7 +50,7 @@
 article.post
   float: left
   margin-bottom: 1em
-  border-bottom: 1px solid #e7e7e7
+  border-bottom: 1px solid #cccccc
   img
     max-width: 100% 
 .title 
@@ -83,25 +80,28 @@ section.post-body
   margin-right: 5px
   border-radius: 4px
   padding: 0.5em
-  background: #fcfcfc
+  background: #f8f8f8
   box-shadow: 2px 2px 2px 1px rgba(171, 166, 166, 0.3)
   color: #b1670a
   text-shadow: 2px 3px 4px white
+  margin-bottom: 5px
 .bin_edit  
   float: left
   margin-right: 5px
   border-radius: 4px
   padding: 0.5em
-  background: #fff
+  background: #f8f8f8
   box-shadow: 2px 2px 2px 1px rgba(171, 166, 166, 0.3)
+  margin-bottom: 5px
 .bin_edit:hover
   background: #fcfcfc   
 .bin_del 
   float: left
   border-radius: 4px
   padding: 0.5em
-  background: #fff
+  background: #f8f8f8
   box-shadow: 2px 2px 2px 1px rgba(171, 166, 166, 0.3)
+  margin-bottom: 5px
 .bin_del:hover
   background: #fcfcfc   
 .row
@@ -157,3 +157,7 @@ section.post-body
   color: #5d5b5b 
 .a   
   color: #4d4d4e
+.form_cont  
+  padding: 1em
+.l_f_cont  
+  padding: 0.5em
