--- a/app/assets/stylesheets/tags.sass
+++ b/app/assets/stylesheets/tags.sass
@@ -59,6 +59,6 @@
   width: 250px
   border-radius: 10px
   padding: 1em
-  background: #fcfcfc
+  background: #f8f8f8
   box-shadow: 2px 2px 2px 1px rgba(218, 212, 212, 0.3)
   border: 1px solid #fff
