--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -1,4 +1,6 @@
-<h2><%= t('.contact_us') %></h2>
+ <div class="col-sm-4 col-md-4 col-lg-6"><img class="logo_cont" src="https://image.ibb.co/i8Yo7y/logo.png" alt="logo" border="0"></div>
+ <div class="col-sm-4 col-md-4 col-lg-6">
+<h3 class="form_cont"><%= t('.contact_us') %></h3>
 <%= form_for @contact, :url => contacts_path, :html => {:class => 'formtastic'} do |f| %>
   <% if ContactUs.require_name %>
     <div class='string required' id='contact_us_contact_name_input'>
@@ -10,8 +12,8 @@
     </div>
   <% end %>
   <div class='string required' id='contact_us_contact_email_input'>
-    <%= f.label :email, (t('.email') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-    <%= f.text_field :email %>
+    <div class="l_f_cont"><%= f.label :email, (t('.email') + content_tag(:abbr, '*', :class => 'required')).html_safe %></div>
+     <div class="l_f_cont"><%= f.text_field :email, class: "form-control"%></div>
     <% if f.object.errors[:email].present? %>
       <p class='inline-error'><%= f.object.errors[:email].join(' and ') %></p>
     <% end %>
@@ -26,8 +28,8 @@
     </div>
   <% end %>
   <div class='string required' id='contact_us_contact_message_input'>
-    <%= f.label :message, (t('.message') + content_tag(:abbr, '*', :class => 'required')).html_safe %>
-    <%= f.text_area :message %>
+     <div class="l_f_cont"><%= f.label :message, (t('.message') + content_tag(:abbr, '*', :class => 'required')).html_safe %></div>
+     <div class="l_f_cont"><%= f.text_area :message, class: "form-control" %></div>
     <% if f.object.errors[:message].present? %>
       <p class='inline-error'><%= f.object.errors[:message].join(' and ') %></p>
     <% end %>
@@ -35,4 +37,5 @@
   <div class='commit'>
     <%= f.submit :submit, :class => 'btn btn-outline-secondary', :title => t('.submit') %>
   </div>
-<% end %>
+<% end %></div>
+<div class="col-sm-12 col-md-12 col-lg-12"></div>
