--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class="col-sm-4 col-md-4 col-lg-6"><img class="logo_cont" src="https://image.ibb.co/i8Yo7y/logo.png" alt="logo" border="0"></div>
+<div class="col-sm-4 col-md-4 col-lg-6">
 <h2><%= t('.sign_up') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -27,3 +29,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
